# soc-automation-lab

./: .env.example  .gitignore  LICENSE  README.md  launcher.py  pyproject.toml  pytest.ini  soc_analysis_report.html  test_auth.py
examples/: debug_4104.py  detect_account_creation.py  detect_brute_force.py  detect_group_membership.py  detect_suspicious_powershell.py  run_analysis.py  run_analysis.py.analysis-ui.bak  run_analysis.py.color.bak  run_analysis.py.final-ui.bak  run_analysis.py.ui.bak
playbooks/: brute-force.md  persistence.md  privilege-escalation.md  user-creation.md
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/soc_automation_lab.egg-info/: PKG-INFO  SOURCES.txt
src/soc_tool/api/: alerts.py  auth.py  client.py  indexer.py
src/soc_tool/cli/: main.py  server.py
src/soc_tool/config/: settings.py
src/soc_tool/correlation/: engine.py
src/soc_tool/detections/: account_creation.py  brute_force.py  engine.py  group_membership.py  linux_failed_sudo.py  linux_privileged_group.py  linux_ssh_brute_force.py  linux_user_creation.py  persistence.py  suspicious_powershell.py
src/soc_tool/models/: alert.py  case.py  finding.py  (+1 more)
tests/: test_account_creation.py  test_alert.py  test_alerts.py  test_auth.py  test_brute_force.py  test_case.py  test_client.py  test_correlation_engine.py  test_engine.py  test_group_membership.py  test_indexer.py  test_linux_failed_sudo.py  test_linux_privileged_group.py  test_linux_ssh_brute_force.py  test_linux_user_creation.py  test_persistence.py  test_report.py  test_settings.py  test_suspicious_powershell.py
(+15 files in other folders)
