[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-automation-lab"
version = "0.1.0"
description = "SOC Automation Lab with Wazuh API integration."
requires-python = ">=3.12"

dependencies = [
    "requests",
    "python-dotenv",
    "Jinja2",
    "tzdata"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
